Refactor: Standardize Gradle plugin application and update configurations
This commit refactors the Gradle build scripts to standardize plugin application and cleans up module-level configurations.

- **Plugin Application:**
  - Replaces custom convention plugin aliases (`genesis.android.library`, `genesis.android.application`) with direct, versioned plugin IDs (e.g., `id("com.android.library") version "9.0.0-alpha13"`) across all modules.
  - Standardizes the application of `compose`, `ksp`, `hilt`, and `serialization` plugins in module `build.gradle.kts` files.
  - Cleans up plugin applications in convention classes (`GenesisBasePlugin`, `GenesisApplicationConvention`, `GenesisLibraryConvention`).

- **Configuration Updates:**
  - Bumps the `minSdk` from 33 to 34 in several modules.
  - Replaces hardcoded dependency strings with version catalog aliases for Retrofit converters and OkHttp interceptors.
  - Corrects the namespace in the `sandbox-ui` module.
  - Updates `gradle.properties` to set `ndkVersion` and adds a path for `glslc`.
  - Replaces `android.enableR8.libraries=true` with `android.enableR8.proguardMode=true`.

- **Dependency Management:**
  - Cleans up and organizes the `libs.versions.toml` file, removing unused aliases and restructuring plugin definitions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 # Build Tools
 agp = "9.0.0-alpha13"
+ndkVersion = "29.0.14206865"
+
 comGoogleGmsGoogleServicesGradlePlugin = "4.4.4"
 converterKotlinxSerialization = "3.0.0"
 gradle = "9.2.0"
@@ -113,7 +115,6 @@ compose-theme-adapterx = { group = "com.google.android.material", name = "compos
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 retrofit-converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
 retrofit-converter-kotlinx-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version = "1.0.0" }
-
 # Missing Kotlin
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines" }
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
@@ -247,12 +248,11 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 
 # Kotlin
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-
+kotlin-android = { id = "org.jetbrains.kotlin", version.ref = "kotlin" }
+serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+# KSP
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 # Hilt
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
-# KSP
-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+
