--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,8 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
+ndkVersion = "29.0.14206865"
+glslc.dir = "C:\\Program Files\\Android\\NDK\\ndk\\glslc"
 # KSP Configuration
 ksp.incremental=true
 ksp.kotlinApiVersion=2.4
@@ -24,7 +26,7 @@ kotlin.code.style=official
 kotlin.incremental=true
 # Build optimization
 android.enableR8.fullMode=true
-android.enableR8.libraries=true
+android.enableR8.proguardMode=true
 android.enableDesugaring=true
 android.builtInKotlin=false
 # Compose Configuration
