Refactor: Modernize Gradle dependencies and enhance Canvas UI
This commit introduces a major refactor of the Gradle dependency management system and significantly enhances the `collab-canvas` feature.

### Gradle and Dependency Refactoring

1.  **Dynamic Local JAR Resolution:**
    - Updated `settings.gradle.kts` to automatically scan all module `libs` directories and register them as Maven repositories.
    - This allows modules to use local JARs (like `xposed/api-82.jar`) with `compileOnly` without needing manual repository entries per module.

2.  **Xposed API Handling:**
    - Removed the central `xposed.api` version catalog alias.
    - Modules now reference the local `api-82.jar` directly using `compileOnly(files("libs/api-82.jar"))`, ensuring they are compile-time only and not bundled.

3.  **Firebase Dependency Management:**
    - Replaced the Firebase Bill of Materials (BOM) with explicitly versioned dependencies in `libs.versions.toml`.
    - This resolves version conflicts and provides clearer control over both base and KTX artifacts for Analytics, Crashlytics, Auth, and Firestore.

4.  **Configuration Cleanup:**
    - Disabled the Gradle configuration cache (`org.gradle.configuration-cache=off`) in `gradle.properties` to mitigate potential build issues.
    - Added several new dependencies to the version catalog (`coil-svg`, `compose-material-icons-extended`, `yukihookapi`) and the `app` module for features like Room, DataStore, and WorkManager.

### Feature Enhancement: `collab-canvas`

The `CanvasScreen` has been completely rebuilt from a basic drawing pad into a feature-rich collaborative tool.

-   **Toolbar and Controls:**
    - Added a `TopAppBar` with Undo, Redo, and Clear canvas actions.
    - Implemented a bottom toolbar for tool selection.
-   **Multi-Tool Support:**
    - Added tools for Pen, Eraser, Highlighter, Line, Rectangle, and Circle.
-   **UI/UX Improvements:**
    - Integrated a color picker palette.
    - Added a vertical slider to c

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
 
         <!-- Main Activity -->
         <activity
-            android:name="dev.aurakai.auraframefx.aura.ui.MainActivity"
+            android:name="dev.aurakai.auraframefx.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
