--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,7 @@ android.builtInKotlin=false
 androidx.compose.compiler.plugin.enableKotlinDebugLogging=true
 androidx.compose.compiler.plugin.enableDebugProguardRules=false
 # Configuration cache
-org.gradle.configuration-cache=true
+org.gradle.configuration-cache=off
 org.gradle.configuration-cache.parallel=true
 org.gradle.configuration-cache.problems=warn
 org.gradle.configuration-cache.use-warning-mode=true
@@ -43,7 +43,6 @@ org.gradle.jvmargs=-Xmx10g
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
 org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
 # AGP 9.0+ specific properties
-android.defaults.buildfeatures.aidl=true
 org.gradle.java.installations.auto-detect=true
 # Kotlin bytecode target guard
 kotlin.jvm.target.validation.mode=warning
