--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,15 @@ navigationCompose = "2.9.5"
 hiltNavigationCompose = "1.3.0"
 
 # Firebase
-firebaseBom = "34.5.0"
+firebaseBom = "33.0.0"
+firebaseAnalytics = "23.0.0"
+firebaseAnalyticsKtx = "22.5.0"
+firebaseCrashlytics = "20.0.3"
+firebaseCrashlyticsKtx = "19.4.4"
+firebaseAuth = "24.0.1"
+firebaseAuthKtx = "23.2.1"
+firebaseFirestore = "26.0.2"
+firebaseFirestoreKtx = "25.1.4"
 
 # Networking
 retrofit = "3.0.0"
@@ -71,7 +79,8 @@ compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 compose-animation = { module = "androidx.compose.animation:animation" }
 compose-material3 = { module = "androidx.compose.material3:material3" }
-
+compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
+yukihookapi= { group = "highcapable.yukihookapi.api", name = "yukihookapi", version = "1.3.1"}
 # AndroidX Core (examples from your set)
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
@@ -96,8 +105,6 @@ androidx-security-crypto = { group = "androidx.security", name = "security-crypt
 # Hilt DI
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
-# (Optional) hilt‑work — set correct version separately if you need it:
-# hilt-work = { group = "androidx.hilt", name = "hilt-work", version = "<set-explicit>" }  # TODO
 
 # Networking
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -105,7 +112,6 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
-# Choose ONE kotlinx-serialization converter. Keeping Jake Wharton:
 retrofit-converter-kotlinx-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version = "1.0.0" }
 
 # Kotlin libs
@@ -117,6 +123,7 @@ kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime",
 # Utilities
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+coil-svg = { group = "io.coil-kt", name = "coil-svg", version.ref = "coil" }
 lottie-compose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie" }
 desugar-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugarJdkLibs" }
 guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
@@ -126,18 +133,19 @@ leakcanary-android = { group = "com.squareup.leakcanary", name = "leakcanary-and
 libsu-core = { group = "com.github.topjohnwu.libsu", name = "core", version.ref = "libsu" }
 libsu-io = { group = "com.github.topjohnwu.libsu", name = "io", version.ref = "libsu" }
 libsu-service = { group = "com.github.topjohnwu.libsu", name = "service", version.ref = "libsu" }
-# YukiHookAPI (KSP path)
 yuki-api = { module = "com.github.LSPosed.YukiHookAPI:api", version.ref = "yuki" }
 yuki-processor = { module = "com.github.LSPosed.YukiHookAPI:processor", version.ref = "yuki" }
-# Xposed API (compileOnly; avoid bridge jar duplication)
 xposed-api = { group = "de.robv.android.xposed", name = "api", version.ref = "xposed" }
 
-# Firebase BOM (import once; libs below need no explicit versions when using BOM)
-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
-firebase-analytics-ktx = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
-firebase-crashlytics-ktx = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
-firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx" }
-firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
+# Firebase dependencies with explicit versions and KTX variants
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics", version.ref = "firebaseAnalytics" }
+firebase-analytics-ktx = { group = "com.google.firebase", name = "firebase-analytics-ktx", version.ref = "firebaseAnalyticsKtx" }
+firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics", version.ref = "firebaseCrashlytics" }
+firebase-crashlytics-ktx = { group = "com.google.firebase", name = "firebase-crashlytics-ktx", version.ref = "firebaseCrashlyticsKtx" }
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 [bundles]
 lifecycle = [
@@ -153,7 +161,11 @@ firebase = [
     "firebase-analytics-ktx",
     "firebase-crashlytics-ktx",
     "firebase-auth-ktx",
-    "firebase-firestore-ktx"
+    "firebase-firestore-ktx",
+    "firebase-analytics",
+    "firebase-crashlytics",
+    "firebase-auth",
+    "firebase-firestore"
 ]
 androidx-core = [
     "androidx-core-ktx",
