--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ hilt = "2.57.2"
 hiltWork = "1.3.0"
 kotlin = "2.3.0-Beta3"
 ksp = "2.3.0"
-kavaref = "1.0.0" # placeholder - update to the preferred KavaRef version if needed
+kavaref = "1.0.1" # bumped to match downloaded artifacts (kavaref-core/extension 1.0.1)
 
 # Android SDK
 compile-sdk = "36"
@@ -94,7 +94,8 @@ libsu = "6.0.0"
 xposed = "82"
 yuki = "1.3.0"
 yukihookapi = "1.3.1"
-
+ndk = "29.0.14206865"
+cmake = "3.7.0"
 # Testing
 junit = "4.13.2"
 junitJupiter = "6.0.0"
